force-app/main/default/objects/Chart_of_Account__c/fields/Account_Info__c.field-meta.xml
<CustomField>
    <fullName>Account_Info__c</fullName>
    <label>Account Info</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>