force-app/main/default/objects/Chart_of_Account__c/fields/Chart_of_Account_Type__c.field-meta.xml
<CustomField>
    <fullName>Chart_of_Account_Type__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Chart of Account Type</label>
    <referenceTo>Chart_of_Account_Type__c</referenceTo>
    <relationshipLabel>Chart of Accounts</relationshipLabel>
    <relationshipName>Chart_of_Accounts</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>