force-app/main/default/objects/Chart_of_Account__c/fields/Chart_of_Account_Type_Code__c.field-meta.xml
<CustomField>
    <fullName>Chart_of_Account_Type_Code__c</fullName>
    <formula>Chart_of_Account_Type__r.Code__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Chart of Account Type Code</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>