force-app/main/default/objects/Chart_of_Account__c/fields/Code__c.field-meta.xml
<CustomField>
    <fullName>Code__c</fullName>
    <externalId>true</externalId>
    <label>Code</label>
    <precision>18</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>