force-app/main/default/objects/Chart_of_Account__c/fields/Parent_Chart_of_Account__c.field-meta.xml
<CustomField>
    <fullName>Parent_Chart_of_Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Parent Chart of Account</label>
    <referenceTo>Chart_of_Account__c</referenceTo>
    <relationshipLabel>Chart of Accounts</relationshipLabel>
    <relationshipName>Chart_of_Accounts</relationshipName>
    <type>Lookup</type>
</CustomField>