force-app/main/default/objects/Chart_of_Account__c/fields/Parent_COA_Code__c.field-meta.xml
<CustomField>
    <fullName>Parent_COA_Code__c</fullName>
    <formula>Parent_Chart_of_Account__r.Code__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Parent COA Code</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>