force-app/main/default/objects/Chart_of_Account__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>Code__c</columns>
    <columns>NAME</columns>
    <columns>Chart_of_Account_Type__c</columns>
    <columns>Balance__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>